--- a/healthyfood.html
+++ b/healthyfood.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Veg-Items</title>
+    <title>HealthyFood</title>
     <style>
         body{
             background-color: #B2C8BA;
@@ -33,25 +33,26 @@
         #s4{
             padding-left: 390px;
         }
+
     </style>
 </head>
 <body>
-    <br><br>
-    <h2>Why are you waiting for?Here is your Vegan Food...Enjoy</h2>
-
-    <img id="i1" src="vb1.jpeg" alt="Veg Biryani" width="25%" height="250px">
     
-    <img id="i2" src="vb2kaju.jpeg" alt="Kaju Biryani" width="25%" height="250px">
+    <h2>Don't forget your diet..Don't Neglect it..Take care..</h2>
+
+    <img id="i1" src="mixedfruitsalad.jpeg" alt="FruitSalad" width="25%" height="250px">
+    
+    <img id="i2" src="dryfruits.jpeg" alt="DryFruits" width="25%" height="250px">
     <br><br>
     <span id="s1" style="font-size: 20px;">Vegetable Biryani:<mark> ₹200 for one</mark></span>
-    <span id="s2" style="font-size: 20px;">Kaju Biryani:<mark> ₹350 for one</mark></span>
+    <span id="s2" style="font-size: 20px;">Kaju Biryani:<mark> ₹450 for one</mark></span>
     <br><br>
-    <img id="i3" src="vegpizza.jpeg" alt="Pizza" width="25%" height="250px">
+    <img id="i3" src="sandwitch.jpeg" alt="Sandwich" width="25%" height="250px">
    
-    <img id="i4" src="fdr1.jpeg" alt="FriedRice" width="25%" height="250px">
+    <img id="i4" src="greensalad.jpeg" alt="GreenSalad" width="25%" height="250px">
     <br><br>
-    <span id="s3" style="font-size: 20px;">Paneer Pizza:<mark> ₹270 for one</mark></span>
-    <span id="s4" style="font-size: 20px;">Gobi FriedRice:<mark> ₹250 for one</mark></span>
+    <span id="s3" style="font-size: 20px;">Paneer Pizza:<mark> ₹100 for one</mark></span>
+    <span id="s4" style="font-size: 20px;">Gobi FriedRice:<mark> ₹450 for one</mark></span>
     <br></br>
 
 </body>
