--- a/Delivery.html
+++ b/Delivery.html
@@ -81,7 +81,7 @@
         <a href="breakfast.html">
         <img id="i1" src="Breakfast.jpeg" alt="Breakfast" width="23%" height="200px">
         </a>
-        <a href="Beverages.html">
+        <a href="healthyfood.html">
         <img id="i2" src="Healthy.jpeg" alt="HealthyFood" width="23%" height="200px">
         </a>
         <a href="Veg.html">
@@ -97,7 +97,7 @@
             <img id="i4" src="Non-veg.jpeg" alt="Non-veg" width="23%" height="200px">
         </a>
         <a href="Beverages.html">
-            <img id="i4" src="Beverages.jpeg" alt="Beverages" width="23%" height="200px">
+            <img id="i5" src="Beverages.jpeg" alt="Beverages" width="23%" height="200px">
         </a>
         <br><br><br>
         <span id="s4" style="font-size: 20px;"><a href="NonVeg.html">NonVeg</a></span>
