--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 
 </head>
 <body> 
+    <link rel="icon" href="Zomato_Logo.jpg">
     <br>
     <div style=" background-image: url(main_bg.jpeg);
     background-repeat: no-repeat ;
