--- a/healthyfood.html
+++ b/healthyfood.html
@@ -44,15 +44,15 @@
     
     <img id="i2" src="dryfruits.jpeg" alt="DryFruits" width="25%" height="250px">
     <br><br>
-    <span id="s1" style="font-size: 20px;">Vegetable Biryani:<mark> ₹200 for one</mark></span>
-    <span id="s2" style="font-size: 20px;">Kaju Biryani:<mark> ₹450 for one</mark></span>
+    <span id="s1" style="font-size: 20px;">FruitSalad:<mark> ₹100 for one</mark></span>
+    <span id="s2" style="font-size: 20px;">DryFruits:<mark> ₹250 for one</mark></span>
     <br><br>
     <img id="i3" src="sandwitch.jpeg" alt="Sandwich" width="25%" height="250px">
    
     <img id="i4" src="greensalad.jpeg" alt="GreenSalad" width="25%" height="250px">
     <br><br>
-    <span id="s3" style="font-size: 20px;">Paneer Pizza:<mark> ₹100 for one</mark></span>
-    <span id="s4" style="font-size: 20px;">Gobi FriedRice:<mark> ₹450 for one</mark></span>
+    <span id="s3" style="font-size: 20px;">Sandwich:<mark> ₹80 for one</mark></span>
+    <span id="s4" style="font-size: 20px;">GreenSalad:<mark> ₹150 for one</mark></span>
     <br></br>
 
 </body>
