--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project using HTML and CSS(Zomato)</title>
     <style>
+        type <link rel="icon" href="Zomato_Logo.jpg" type="image/x-icon"/>
     #a1{
         padding-left: 20px;
     }
@@ -47,7 +48,7 @@
 
 </head>
 <body> 
-    <link rel="icon" href="Zomato_Logo.jpg">
+<!--     <link rel="icon" href="Zomato_Logo.jpg"> -->
     <br>
     <div style=" background-image: url(main_bg.jpeg);
     background-repeat: no-repeat ;
