--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project using HTML and CSS(Zomato)</title>
     <style>
-        type <link rel="icon" href="Zomato_Logo.jpg" type="image/x-icon"/>
+        
+        <link rel="icon" href= "index.html/Zomato_Logo.jpg" type="image/x-icon"> 
     #a1{
         padding-left: 20px;
     }
