--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project using HTML and CSS(Zomato)</title>
+    <title>Zomato</title>
+    <link rel="shortcut icon" type="x-icon" href="Zomato_Logo.jpg">
     <style>
         
         <link rel="icon" href= "index.html/Zomato_Logo.jpg" type="image/x-icon"> 
